--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
+    "element-plus": "^2.8.1",
     "vue": "^3.4.35",
     "vue-responsive-menu": "^0.2.2",
     "vue-router": "^4.0.3",
     "vue-template-compiler": "^2.7.16",
+    "vuedraggable": "^4.1.0",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
@@ -44,7 +46,6 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
-    "jest": "^27.0.5",
     "prettier": "^2.4.1",
     "vue-loader": "^17.4.2"
   }
