--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "votaciones-ui",
+  "name": "VotUCO",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -16,11 +16,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.6",
     "@popperjs/core": "^2.11.8",
-    "axios": "^1.6.8",
+    "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13",
+    "vue": "^3.4.35",
+    "vue-responsive-menu": "^0.2.2",
     "vue-router": "^4.0.3",
+    "vue-template-compiler": "^2.7.16",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
@@ -33,6 +35,7 @@
     "@vue/cli-plugin-unit-jest": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/compiler-sfc": "^3.4.35",
     "@vue/test-utils": "^2.0.0-0",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
     "babel-jest": "^27.0.6",
@@ -42,6 +45,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "vue-loader": "^17.4.2"
   }
 }
